ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Claims_Defaults__c/Warranty_Claims_Defaults__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Default settings for the Warranty and Claims Process. This includes phone numbers, labour rates, etc</description>
    <label>Warranty &amp; Claims Defaults</label>
</CustomObject>