ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Claims_Defaults__c/fields/Decra_Document_Footer__c.field-meta.xml
<CustomField>
    <fullName>Decra_Document_Footer__c</fullName>
    <description>CLAIMSV2-880</description>
    <label>Decra Document Footer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>