ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Claims_Defaults__c/fields/Decra_Email__c.field-meta.xml
<CustomField>
    <fullName>Decra_Email__c</fullName>
    <description>CLAIMSV2-880</description>
    <label>Decra Email</label>
    <type>Email</type>
</CustomField>