ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Claims_Defaults__c/fields/Decra_Fax__c.field-meta.xml
<CustomField>
    <fullName>Decra_Fax__c</fullName>
    <description>CLAIMSV2-880</description>
    <label>Decra Fax</label>
    <type>Phone</type>
</CustomField>