ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Claims_Defaults__c/fields/Decra_Office_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Decra_Office_Address_Line_2__c</fullName>
    <description>CLAIMSV2-880</description>
    <label>Decra Office Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>