ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Claims_Defaults__c/fields/Decra_Toll_Free__c.field-meta.xml
<CustomField>
    <fullName>Decra_Toll_Free__c</fullName>
    <description>CLAIMSV2-880</description>
    <label>Decra Toll Free</label>
    <type>Phone</type>
</CustomField>