ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Claims_Defaults__c/fields/Eastern_Canada_Email__c.field-meta.xml
<CustomField>
    <fullName>Eastern_Canada_Email__c</fullName>
    <defaultValue>&quot;canada.claims@iko.com&quot;</defaultValue>
    <description>Email address for customer service for Eastern Canada. This is used in templates for Warranties, Offer Releases etc.</description>
    <label>Eastern Canada Email</label>
    <type>Email</type>
</CustomField>