ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Claims_Defaults__c/fields/Eastern_Canada_IKO_Office_Address__c.field-meta.xml
<CustomField>
    <fullName>Eastern_Canada_IKO_Office_Address__c</fullName>
    <defaultValue>&quot;80 Stafford Drive, Brampton, Ontario L6W 1L4&quot;</defaultValue>
    <description>Eastern Canada IKO Office Address</description>
    <label>Eastern Canada IKO Office Address</label>
    <type>TextArea</type>
</CustomField>