ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Claims_Defaults__c/fields/Eastern_Canada_IKO_Office_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Eastern_Canada_IKO_Office_Address_Line_1__c</fullName>
    <defaultValue>&quot;80 Stafford Drive&quot;</defaultValue>
    <description>Eastern Canada Multi Line Address Line 1</description>
    <label>Eastern Canada IKO Office Address Line 1</label>
    <type>TextArea</type>
</CustomField>