ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Claims_Defaults__c/fields/Eastern_Canada_IKO_Office_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Eastern_Canada_IKO_Office_Address_Line_2__c</fullName>
    <defaultValue>&quot;Brampton, Ontario&quot;</defaultValue>
    <description>Eastern Canada Multi Line Address Line 2</description>
    <label>Eastern Canada IKO Office Address Line 2</label>
    <type>TextArea</type>
</CustomField>