ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Claims_Defaults__c/fields/Eastern_Canada_IKO_Office_Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Eastern_Canada_IKO_Office_Address_Line_3__c</fullName>
    <defaultValue>&quot;L6W 1L4&quot;</defaultValue>
    <description>Postal Code for Eastern Canada IKO Office</description>
    <inlineHelpText>Postal Code for Eastern Canada IKO Office</inlineHelpText>
    <label>Eastern Canada IKO Office Address Line 3</label>
    <type>TextArea</type>
</CustomField>