ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Claims_Defaults__c/fields/Eastern_Canada_Toll_Free__c.field-meta.xml
<CustomField>
    <fullName>Eastern_Canada_Toll_Free__c</fullName>
    <defaultValue>&quot;(800) 361-5836&quot;</defaultValue>
    <description>Used for Ontario, Quebec, New Brunswick, Nova Scotia, Newfoundland &amp; Labrador and Prince Edward Island.</description>
    <inlineHelpText>Used for Ontario, Quebec, New Brunswick, Nova Scotia, Newfoundland &amp; Labrador and Prince Edward Island.</inlineHelpText>
    <label>Eastern Canada Toll Free</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>