ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Claims_Defaults__c/fields/Hand_Seal_Bundle_Rate_Default__c.field-meta.xml
<CustomField>
    <fullName>Hand_Seal_Bundle_Rate_Default__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Hand Seal Bundle Rate (Default)</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>