ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Claims_Defaults__c/fields/US_Document_Footer__c.field-meta.xml
<CustomField>
    <fullName>US_Document_Footer__c</fullName>
    <defaultValue>&quot;235 W. SOUTH TEC DR. • KANKAKEE, IL 60901-8426 • (800) 433-2811  • FAX (815) 937-5695&quot;</defaultValue>
    <description>US Document footer.</description>
    <label>US Document Footer</label>
    <type>TextArea</type>
</CustomField>