ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Claims_Defaults__c/fields/US_Email__c.field-meta.xml
<CustomField>
    <fullName>US_Email__c</fullName>
    <defaultValue>&quot;productconcerns.us@iko.com&quot;</defaultValue>
    <description>Email address for customer service for the US. Used in templates for offer letters etc.</description>
    <inlineHelpText>Email address for customer service for the US. Used in templates for offer letters etc.</inlineHelpText>
    <label>US Email</label>
    <type>Email</type>
</CustomField>