ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Claims_Defaults__c/fields/US_Fax__c.field-meta.xml
<CustomField>
    <fullName>US_Fax__c</fullName>
    <defaultValue>&quot;(815) 937-5695&quot;</defaultValue>
    <label>US Fax</label>
    <type>Phone</type>
</CustomField>