ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Claims_Defaults__c/fields/US_IKO_Office_Address__c.field-meta.xml
<CustomField>
    <fullName>US_IKO_Office_Address__c</fullName>
    <defaultValue>&quot;235 W. South Tec Drive Kankakee, Illinois  60901&quot;</defaultValue>
    <description>US IKO Office Address</description>
    <label>US IKO Office Address</label>
    <type>TextArea</type>
</CustomField>