ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Claims_Defaults__c/fields/US_IKO_Office_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>US_IKO_Office_Address_Line_1__c</fullName>
    <defaultValue>&quot;235 W. South Tec Drive&quot;</defaultValue>
    <label>US IKO Office Address Line 1</label>
    <type>TextArea</type>
</CustomField>