ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Claims_Defaults__c/fields/US_IKO_Office_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>US_IKO_Office_Address_Line_2__c</fullName>
    <defaultValue>&quot;Kankakee, Illinois 60901&quot;</defaultValue>
    <label>US IKO Office Address Line 2</label>
    <type>TextArea</type>
</CustomField>