ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Claims_Defaults__c/fields/US_IKO_Office_Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>US_IKO_Office_Address_Line_3__c</fullName>
    <defaultValue>&quot;60901&quot;</defaultValue>
    <description>Postal Code for US IKO Office</description>
    <inlineHelpText>Postal Code for US IKO Office</inlineHelpText>
    <label>US IKO Office Address Line 3</label>
    <type>TextArea</type>
</CustomField>