ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Claims_Defaults__c/fields/US_Toll_Free__c.field-meta.xml
<CustomField>
    <fullName>US_Toll_Free__c</fullName>
    <defaultValue>&quot;(800) 433-2811&quot;</defaultValue>
    <description>Toll Free used for the entire United States</description>
    <inlineHelpText>Toll Free used for the entire United States</inlineHelpText>
    <label>US Toll Free</label>
    <type>Phone</type>
</CustomField>