ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Claims_Defaults__c/fields/Warranty_Document_Footer__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Document_Footer__c</fullName>
    <defaultValue>&quot;235 W. SOUTH TEC DR. • KANKAKEE, IL 60901-8426 • (800) 433-2811 or (815) 802-3182 • FAX (815) 937-5695&quot;</defaultValue>
    <description>Document Footer for warranty services department. Used in the Warranty Conga Templates</description>
    <inlineHelpText>Document Footer for warranty services department. Used in the Warranty Conga Templates</inlineHelpText>
    <label>Warranty Document Footer</label>
    <type>TextArea</type>
</CustomField>