ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Claims_Defaults__c/fields/Warranty_Office_Email__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Office_Email__c</fullName>
    <defaultValue>&quot;commercialwarranties@iko.com&quot;</defaultValue>
    <description>Email address for warranty services department. Used in the Warranty Conga Templates</description>
    <inlineHelpText>Email address for warranty services department. Used in the Warranty Conga Templates</inlineHelpText>
    <label>Warranty Office Email</label>
    <type>Email</type>
</CustomField>