ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Claims_Defaults__c/fields/Warranty_Office_Fax__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Office_Fax__c</fullName>
    <defaultValue>&quot;(905) 457-3196&quot;</defaultValue>
    <description>Fax Number of warranty services department. Used in the Warranty Conga Templates.</description>
    <inlineHelpText>Fax Number of warranty services department. Used in the Warranty Conga Templates.</inlineHelpText>
    <label>Warranty Office Fax</label>
    <type>Phone</type>
</CustomField>