ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Claims_Defaults__c/fields/Warranty_Office_Phone__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Office_Phone__c</fullName>
    <defaultValue>&quot;(800) 268-0878&quot;</defaultValue>
    <description>Phone Number of warranty services department. Used in the Warranty Conga Templates.</description>
    <inlineHelpText>Phone Number of warranty services department. Used in the Warranty Conga Templates.</inlineHelpText>
    <label>Warranty Office Phone</label>
    <type>Phone</type>
</CustomField>