ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Claims_Defaults__c/fields/Western_Canada_Document_Footer__c.field-meta.xml
<CustomField>
    <fullName>Western_Canada_Document_Footer__c</fullName>
    <defaultValue>&quot;80 Stafford Drive, Brampton, Ontario  L6W 1L4 • Fax: (905) 457-3196&quot;</defaultValue>
    <label>Western Canada Document Footer</label>
    <type>TextArea</type>
</CustomField>