ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Claims_Defaults__c/fields/Western_Canada_Fax__c.field-meta.xml
<CustomField>
    <fullName>Western_Canada_Fax__c</fullName>
    <defaultValue>&quot;(905) 457-3196&quot;</defaultValue>
    <label>Western Canada Fax</label>
    <type>Phone</type>
</CustomField>