ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Claims_Defaults__c/fields/Western_Canada_IKO_Office_Address__c.field-meta.xml
<CustomField>
    <fullName>Western_Canada_IKO_Office_Address__c</fullName>
    <defaultValue>&quot;80 Stafford Drive, Brampton, Ontario L6W 1L4&quot;</defaultValue>
    <description>West Canada IKO Office Address</description>
    <label>Western Canada IKO Office Address</label>
    <type>TextArea</type>
</CustomField>