ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Claims_Defaults__c/fields/Western_Canada_IKO_Office_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Western_Canada_IKO_Office_Address_Line_1__c</fullName>
    <defaultValue>&quot;80 Stafford Drive&quot;</defaultValue>
    <description>Western Canada Multi Line Address Line 1</description>
    <label>Western Canada IKO Office Address Line 1</label>
    <type>TextArea</type>
</CustomField>