ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Claims_Defaults__c/fields/Western_Canada_IKO_Office_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Western_Canada_IKO_Office_Address_Line_2__c</fullName>
    <defaultValue>&quot;Brampton, Ontario L6W 1L4&quot;</defaultValue>
    <description>Western Canada Multi Line Address Line 2</description>
    <label>Western Canada IKO Office Address Line 2</label>
    <type>TextArea</type>
</CustomField>