ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Warranty_Claims_Defaults__c/fields/Western_Canada_Toll_Free__c.field-meta.xml
<CustomField>
    <fullName>Western_Canada_Toll_Free__c</fullName>
    <defaultValue>&quot;(800) 521-8484&quot;</defaultValue>
    <description>Western Canada Toll Free Number. Used for Manitoba, BC, SK, NT, YT an NU</description>
    <inlineHelpText>Western Canada Toll Free Number</inlineHelpText>
    <label>Western Canada Toll Free</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>